# cfb_client_api

./: Cargo.toml  README.md
src/: api_client.rs  lib.rs  main.rs
src/endpoints/: betting_endpoint.rs  calendar_endpoint.rs  coaches_endpoint.rs  conferences_endpoint.rs  draft_endpoint.rs  drives_endpoint.rs  games_details.rs  games_endpoint.rs  metrics_endpoint.rs  mod.rs  players_endpoint.rs  plays_details.rs  plays_endpoint.rs  rankings_endpoint.rs  ratings_endpoint.rs  records_endpoint.rs  recruiting_endpoint.rs  scoreboard_endpoint.rs  stats_endpoint.rs  teams_endpoint.rs  venues_endpoint.rs
tests/: calendar_tests.rs  endpoint_tests.rs  plays_tests.rs
tests/common/: mod.rs
